--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          <a href="#">Internet</a>
          <a href="#">Vestíveis</a>
          <a href="#">Realidade Aumentada</a>
-         <a href="#">Realidade  Virtual</a>
+         <a href="#">Realidade Virtual</a>
       </nav>
 
    </header>
@@ -45,34 +45,109 @@
    <main class="grid container">
       <section id="featured" class="grid grid-flow-col gap-16">
          <figure class="card">
-            <img src="assets/images/Image 01.png" alt="">
+            <img src="assets/images/Image 01.png"
+               alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.">
 
             <figcaption>
-                  <span class="content-tag">robotica</span>
-                  <h2 class="text-xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e eficiência nas residências.</h2>
-               </figcaption>
+               <span class="content-tag">robotica</span>
+               <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais
+                  conforto e eficiência nas residências.</h2>
+            </figcaption>
          </figure>
 
+         <!-- Small blocks -->
          <div class="grid grid-cols-2 gap-16">
             <figure class="card">
-               <img src="assets/images/Image 02.png" alt="">
+               <img src="assets/images/Image 02.png"
+                  alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
 
-               
+               <figcaption>
+                  <span class="content-tag">Hologramas</span>
+                  <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos
+                     nossas telas!</h2>
+               </figcaption>
             </figure>
 
             <figure class="card">
-               <img src="assets/images/Image 03.png" alt="">
+               <img src="assets/images/Image 03.png"
+                  alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
+
+               <figcaption>
+                  <span class="content-tag">Internet</span>
+                  <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma
+                     como vivemos e nos comunic...</h2>
+               </figcaption>
             </figure>
 
             <figure class="card">
-               <img src="assets/images/Image 04.png" alt="">
+               <img src="assets/images/Image 04.png"
+                  alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo insights valiosos para o bem-estar pessoal.">
+
+               <figcaption>
+                  <span class="content-tag">Vestíveis</span>
+                  <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental, oferecendo
+                     insights valiosos para o...</h2>
+               </figcaption>
             </figure>
 
             <figure class="card">
-               <img src="assets/images/Image 05.png" alt="">
+               <img src="assets/images/Image 05.png"
+                  alt="Escolas adotam a tecnologia VR para proporcionar experiências imersivas, transformando a aprendizagem tradicional.">
+
+               <figcaption>
+                  <span class="content-tag">Realidade Virtual</span>
+                  <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências imersivas,
+                     transformando a aprendizagem trad...</h2>
+               </figcaption>
             </figure>
          </div>
       </section>
+
+      <section id="weekly">
+         <header class="grid grid-flow-col">
+            <h3>Mais lidas da semana</h3>
+            <a href="#" class="grid grid-flow-col">
+               <strong>Ver tudo</strong>
+               <span></span>
+            </a>
+         </header>
+
+         <div class="grid gap-16">
+            <figure>
+               <span class="content-tag">veiculos</span>
+               <img src="assets/images/Image 06.png"
+                  alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
+               <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...
+               </p>
+            </figure>
+
+            <figure>
+               <span class="content-tag">Hologramas</span>
+               <img src="assets/images/Image 07.png"
+                  alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
+               <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...
+               </p>
+            </figure>
+
+            <figure>
+               <span class="content-tag">Realidade virtual</span>
+               <img src="assets/images/Image 08.png"
+                  alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
+               <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...
+               </p>
+            </figure>
+
+            <figure>
+               <span class="content-tag">Internet</span>
+               <img src="assets/images/Image 09.png"
+                  alt="Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.">
+               <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.
+               </p>
+            </figure>
+
+         </div>
+      </section>
+
    </main>
 </body>
 
